# marffet-app

./: .Dockerfile.swp  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  GEMINI.md  LICENSE  PRD.md  README-zh-CN.md  README-zh-TW.md  README.md  ZEABUR_LOGIN_FIX.md  bandit_report.json  check_nesting.py  check_syntax.py  checklist_out.txt  clean_all_cache.sh  clean_current_run.sh  compare_6664.py  crawl_log.txt  dashboard.py  debug_calc_6640.py  debug_excel_cols.py  debug_ijson.py  debug_mars_calc.py  debug_portfolio.py  debug_tpex_crawler.py  debug_tpex_div.py  debug_tpex_endpoints.py  debug_tpex_openapi.py  debug_tpex_params.py  debug_tpex_yf.py  error_response.html  fetch_list.py  fetch_names_isin.py  find_in_cache.py  fix_autopep8.py  fix_db.py  fix_e402.py  (+76 more)
.agents/: skills
.gemini/: commands  skills
.github/: FUNDING.yml
.opencode/: commands
app/: auth.py  config.py  database.py  dividend_cache.py  engines.py  feedback_db.py  main.py  portfolio.db  portfolio_db.py  viz.py
artifacts/: task.md
code_review/: CR_20260124_latenight.md  CR_20260128_session_cookie_fix.md  CR_20260129_portfolio_performance.md  auth_fix_plan.md  code_diff_report.md  code_review_2026_02_02.md  code_review_2026_02_02_v1.md  code_review_2026_02_02_v2.md  code_review_2026_02_03_sync.md  review_20260207_v3.md  review_2026_01_25.md  review_2026_01_25_v3.md  review_2026_01_30_night.md  review_2026_01_31_full_product.md  review_2026_02_01_final.md  review_2026_02_06_evening.md
data/: basis_audit_report.json  dividend_patches.json  dividends.txt  dividends_all.json  intermediate_candidates_v2.txt  missing_stocks_report.txt  target_crawl_list.json  yearly_nominal_prices.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  sentry.server.config.ts  test_group2.spec.ts
frontend_vite_backup/: README.md  package-lock.json  package.json  vite.config.ts
jira/: BUG-001_E2E_Add_Stock_Timeout.md  BUG-006_test_env_flakiness.md  BUG-007_transaction_modal_timeout.md  (+4 more)
(+3041 files in other folders)
