[project]
name = "martian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.6",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
    "pandera>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]
