[project]
name = "martian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "authlib>=1.6.6",
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.4",
    "fastapi>=0.128.0",
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "lxml>=6.0.2",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "ijson>=3.3.0",
    "yfinance>=1.0",
    "sentry-sdk[fastapi]>=2.52.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
    "pandera>=0.28.1",
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
include = [
    "app/project_tw/references/*.xlsx",
    "app/project_tw/output/*.xlsx",
    "app/project_tw/*.csv",
    "app/static/**/*",
]
[tool.mypy]
exclude = [
    '^.*\.agent/.*',
    '^.*\.agents/.*',
]
